correct for the extra space of the documentation icon

--- a/saltgui/static/stylesheets/main.css
+++ b/saltgui/static/stylesheets/main.css
@@ -82,7 +82,7 @@ h1 {
   margin-left: 0;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 950px) {
   .panel {
     margin-left: 0;
   }
@@ -182,12 +182,12 @@ h1 {
   cursor: pointer;
 }
 
-@media (min-width: 900px) {
+@media (min-width: 950px) {
   .fullmenu { display: inline-block; }
   .minimenu { display: none; }
 }
 
-@media (max-width: 900px) {
+@media (max-width: 950px) {
   .fullmenu { display: none; }
   .minimenu { display: inline-block; }
 }
